--- a/cnaas/frontend/templates/devices.html
+++ b/cnaas/frontend/templates/devices.html
@@ -3,18 +3,18 @@
     <title>CNaaS</title>
   </head>
   <style>
-  #users {
+  #devices {
       font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
       border-collapse: collapse;
       width: 100%;
   }
-  #users td, #users th {
+  #devices td, #devices th {
       border: 1px solid #ddd;
       padding: 8px;
   }
-  #users tr:nth-child(even){background-color: #f2f2f2;}
-  #users tr:hover {background-color: #ddd;}
-  #users th {
+  #devices tr:nth-child(even){background-color: #f2f2f2;}
+  #devices tr:hover {background-color: #ddd;}
+  #devices th {
       padding-top: 12px;
       padding-bottom: 12px;
       text-align: left;
@@ -32,7 +32,7 @@
 
     <form action="/cnaas/devices/" method="post">
       {% csrf_token %}
-      <table id="users">
+      <table id="devices">
 	<tr>
 	  <th>Sync</th>
 	  <th>ID</th>
@@ -55,66 +55,32 @@
 
 	{% for device in devices %}
 	<tr>
-	  <td>
-	    <input type="checkbox" name="device" value="{{device.hostname}},{{device.id}}"/>
+	  <td><input type="checkbox" name="device" value="{{device.hostname}},{{device.id}}"/></td>
+	  <td>{{ device.id }}</td>
+	  <td>{{ device.hostname }}
 	  </td>
-	  <td>
-	    {{ device.id }}
-	  </td>
-	  <td>
-	    {{ device.hostname }}
-	  </td>
-	  <td>
-	    {% if device.site_id is not None %} {{ device.site_id }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.description is not None %}  {{ device.description }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.management_ip is not None %} {{ device.management_ip }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.dhcp_ip is not None %} {{ device.dhcp_ip }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.serial is not None %} {{ device.serial }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.ztp_mac is not None %} {{ device.ztp_mac }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.platform is not None %} {{ device.platform }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.vendor is not None %} {{ device.vendor }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.model is not None %} {{ device.model }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.os_version is not None %} {{ device.os_version }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.synchronized is not None %} {{ device.synchronized }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.state is not None %} {{ device.state }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.device_type is not None %} {{ device.device_type }} {% endif %}
-	  </td>
-	  <td>
-	    {% if device.last_seen is not None %} {{ device.last_seen }} {% endif %}
-	  </td>
+	  <td>{% if device.site_id is not None %} {{ device.site_id }} {% endif %}</td>
+	  <td>{% if device.description is not None %}  {{ device.description }} {% endif %}</td>
+	  <td>{% if device.management_ip is not None %} {{ device.management_ip }} {% endif %}</td>
+	  <td>{% if device.dhcp_ip is not None %} {{ device.dhcp_ip }} {% endif %}</td>
+	  <td>{% if device.serial is not None %} {{ device.serial }} {% endif %}</td>
+	  <td>{% if device.ztp_mac is not None %} {{ device.ztp_mac }} {% endif %}</td>
+	  <td>{% if device.platform is not None %} {{ device.platform }} {% endif %}</td>
+	  <td>{% if device.vendor is not None %} {{ device.vendor }} {% endif %}</td>
+	  <td>{% if device.model is not None %} {{ device.model }} {% endif %}</td>
+	  <td>{% if device.os_version is not None %} {{ device.os_version }} {% endif %}</td>
+	  <td>{% if device.synchronized is not None %} {{ device.synchronized }} {% endif %}</td>
+	  <td>{% if device.state is not None %} {{ device.state }} {% endif %}</td>
+	  <td>{% if device.device_type is not None %} {{ device.device_type }} {% endif %}</td>
+	  <td>{% if device.last_seen is not None %} {{ device.last_seen }} {% endif %}</td>
 	</tr>
 	{% endfor %}
       </table>
       <br>
       <input type="submit" name="refresh_templates" value="Refresh templates"/>
       <input type="submit" name="refresh_settings" value="Refresh settings"/>
+      <input type="submit" name="sync_dryrun" value="Sync - dry run"/>
       <input type="submit" name="sync" value="Sync"/>
-      <input type="submit" name="sync_all" value="Sync all devices"/>
-      <input type="submit" name="show_config" value="Show configuration"/>
       <input type="submit" name="remove" value="Remove"/>
     </form>
   </body>
