--- a/cnaas/frontend/templates/devices.html
+++ b/cnaas/frontend/templates/devices.html
@@ -3,24 +3,51 @@
     <title>CNaaS</title>
   </head>
   <style>
-  #devices {
-      font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-  }
-  #devices td, #devices th {
-      border: 1px solid #ddd;
-      padding: 8px;
-  }
-  #devices tr:nth-child(even){background-color: #f2f2f2;}
-  #devices tr:hover {background-color: #ddd;}
-  #devices th {
-      padding-top: 12px;
-      padding-bottom: 12px;
-      text-align: left;
-      background-color: #4CAF50;
-      color: white;
-  }
+    #devices {
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	border-collapse: collapse;
+	width: 100%;
+    }
+    #devices td, #devices th {
+	border: 1px solid #ddd;
+	padding: 8px;
+    }
+    #devices tr:nth-child(even){background-color: #f2f2f2;}
+    #devices tr:hover {background-color: #ddd;}
+    #devices th {
+	padding-top: 12px;
+	padding-bottom: 12px;
+	text-align: left;
+	background-color: #4CAF50;
+	color: white;
+    }
+
+    .topnav {
+	background-color: #333;
+	overflow: hidden;
+    }
+
+    .topnav input {
+	border: 0;
+	border-radius: 0;
+	float: left;
+	color: #f2f2f2;
+	background-color: #4CAF50;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 14px;
+    }
+
+    .topnav input:hover {
+	background-color: #ddd;
+	color: black;
+    }
+
+    .topnav input.active {
+	background-color: #4CAF50;
+	color: white;
+    }
   </style>
 
   <body style="background-color:#d0d0d0;text-align:left">
@@ -29,8 +56,15 @@
       alert("{{ message }}");
     </script>
     {% endif %}
-
     <form action="/cnaas/devices/" method="post">
+      <div class="topnav">
+	<input type="submit" name="refresh_templates" value="Refresh templates"/>
+	<input type="submit" name="refresh_settings" value="Refresh settings"/>
+	<input type="submit" name="sync_dryrun" value="Sync - dry run"/>
+	<input type="submit" name="sync" value="Sync"/>
+	<input type="submit" name="remove" value="Remove"/>
+      </div>
+      <br>
       {% csrf_token %}
       <table id="devices">
 	<tr>
@@ -77,11 +111,6 @@
 	{% endfor %}
       </table>
       <br>
-      <input type="submit" name="refresh_templates" value="Refresh templates"/>
-      <input type="submit" name="refresh_settings" value="Refresh settings"/>
-      <input type="submit" name="sync_dryrun" value="Sync - dry run"/>
-      <input type="submit" name="sync" value="Sync"/>
-      <input type="submit" name="remove" value="Remove"/>
     </form>
   </body>
 </html>
