--- a/cnaas/static/style.css
+++ b/cnaas/static/style.css
@@ -43,3 +43,37 @@
     background-color: #4CAF50;
     color: white;
 }
+
+.device_info {
+    width: 100%;    
+    display: table;
+    border-collapse: collapse;
+    border: 0;
+}
+
+.device_info .row {
+    display: table-row;
+    border: 0;
+}
+
+.device_info .title-row {
+    border: 0;
+    border-radius: 0;
+    float: left;
+    color: #f2f2f2;
+    background-color: #4CAF50;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.device_info .cell {
+    display: table-cell;
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 14px;
+    display: table-row;    
+}
