--- a/cnaas/frontend/templates/devices.html
+++ b/cnaas/frontend/templates/devices.html
@@ -3,7 +3,7 @@
   <head>
     <title>CNaaS</title>
     <link rel="stylesheet" href="{% static "style.css" %}"/>
-    <link rel="stylesheet" href="{% static "w3.css" %}"/>    
+    <link rel="stylesheet" href="{% static "w3.css" %}"/>
   </head>
   <body style="background-color:#d0d0d0;text-align:left">
     {% if message is not None %}
@@ -12,14 +12,14 @@
     </script>
     {% endif %}
     <script>
-      function toggle_it(itemID){ 
-	  if ((document.getElementById(itemID).style.display == 'none')) { 
-              document.getElementById(itemID).style.display = '' 
-              event.preventDefault()
-	  } else { 
-              document.getElementById(itemID).style.display = 'none'; 
-              event.preventDefault()
-	  }    
+      function toggle_it(itemID){
+	  if ((document.getElementById(itemID).style.display == 'none')) {
+	      document.getElementById(itemID).style.display = ''
+	      event.preventDefault()
+	  } else {
+	      document.getElementById(itemID).style.display = 'none';
+	      event.preventDefault()
+	  }
       }
     </script>
     <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:20%">
@@ -27,7 +27,7 @@
       <a href="/cnaas/devices" class="w3-bar-item w3-button">Device inventory</a>
       <a href="/cnaas/nac" class="w3-bar-item w3-button">Admission control</a>
     </div>
-    <div style="margin-left: 22%; position: fixed;">
+    <div style="margin-left: 22%; position: fixed; width:70%;">
       <form action="/cnaas/devices/" method="post">
 	<div class="topnav">
 	  <input type="submit" name="refresh_templates" value="Refresh templates"/>
@@ -35,13 +35,12 @@
 	  <input type="submit" name="sync_dryrun" value="Sync devices - dry run"/>
 	  <input type="submit" name="sync" value="Sync devices - push config"/>
 	  <input type="submit" name="remove" value="Remove devices"/>
-	  <input type="label" value="CNaaS 0.2.0.dev0" align="right" style="float: right"/>
 	</div>
 	<br>
 	{% csrf_token %}
-	<table id="devices">
+	<table class="w3-table w3-striped w3-border">
 	  <tr>
-	    <th>Sync</th>
+	    <th>Select</th>
 	    <th>Hostname</th>
 	    <th>Description</th>
 	    <th>Management IP</th>
@@ -68,13 +67,13 @@
 	    <td colspan="100%">
 	      <div class="device_info">
 		<div class="title-row">
-		  <div class="cell">Device ID</div>
+		  <div class="cell">ID</div>
 		  <div class="cell">DHCP IP</div>
-		  <div class="cell">Serial number</div>
+		  <div class="cell">Serial</div>
 		  <div class="cell">ZTP MAC address</div>
-		  <div class="cell">Device platform</div>
-		  <div class="cell">Device vendor</div>
-		  <div class="cell">Device model</div>
+		  <div class="cell">Platform</div>
+		  <div class="cell">Vendor</div>
+		  <div class="cell">Model</div>
 		  <div class="cell">OS version</div>
 		</div>
 		<div class="row">
@@ -86,6 +85,25 @@
 		  <div class="cell">{% if device.vendor is not None %} {{ device.vendor }} {% endif %}</div>
 		  <div class="cell">{% if device.model is not None %} {{ device.model }} {% endif %}</div>
 		  <div class="cell">{% if device.os_version is not None %} {{ device.os_version }} {% endif %}</div>
+		</div>
+	      </div>
+	      <div class="device_info">
+		<div class="title-row">
+		  <div class="cell">Interfaces</div>
+		</div>
+		<div class="row">
+		  <div class="cell">Names:</div>
+		  <div class="cell">
+		  {% for interface in device.interfaces %}
+		  {{ interface.name }}
+		  {% endfor %}
+		  </div>
+		  <div class="cell">Type:</div>
+		  <div class="cell">
+		    {% for interface in device.interfaces %}
+		    {{ interface.configtype }}
+		    {% endfor %}
+		  </div>
 		</div>
 	      </div>
 	    </td>
