--- a/cnaas/static/style.css
+++ b/cnaas/static/style.css
@@ -36,6 +36,19 @@
     min-width:150px;
 }
 
+.topnav a {
+    border: 0;
+    border-radius: 0;
+    float: left;
+    color: #f2f2f2;
+    background-color: darkgrey;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 14px;
+    min-width:150px;
+}
+
 .topnav input:hover {
     background-color: #ddd;
     color: black;
