--- a/cnaas/nac/templates/nac.html
+++ b/cnaas/nac/templates/nac.html
@@ -4,17 +4,7 @@
     <title>CNaaS</title>
     <link rel="stylesheet" href="{% static "style.css" %}"/>
     <link rel="stylesheet" href="{% static "w3.css" %}"/>
-    <script>
-      function toggle_it(itemID){
-	  if ((document.getElementById(itemID).style.display == 'none')) {
-	      document.getElementById(itemID).style.display = ''
-	      event.preventDefault()
-	  } else {
-	      document.getElementById(itemID).style.display = 'none';
-	      event.preventDefault()
-	  }
-      }
-    </script>
+    <script type="text/javascript" src={% static "cnaas.js" %}></script>
   </head>
   <body style="background-color:#d0d0d0;text-align:left">
     <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:20%">
@@ -22,21 +12,22 @@
       <a href="/nms/devices" class="w3-bar-item w3-button">Device inventory</a>
       <a href="/nac/users" class="w3-bar-item w3-button">Admission control</a>
       <a href="/nms/jobs" class="w3-bar-item w3-button">Jobs</a>
+      <a href="/nms/mgmtdomains" class="w3-bar-item w3-button">Management domains</a>
+      <a href="/nms/linknets" class="w3-bar-item w3-button">Linknets</a>
     </div>
-    <div style="margin-left: 22%; position: fixed; width:70%;">
-      <form action="/nac/users/" method="post">
-	<div class="topnav">
-	  <a href="#" id="toggle" onClick="toggle_it('add_user');">Add user</a>
-	  <input type="submit" name="user_delete" value="Remove user"/>
-	</div>
-	<div id="add_user" style="display: none; background-color: #f2f2f2">
+    <form action="/nac/users/" method="post">
+      <div class="topnav" style="margin-left: 20%; position: fixed; width:100%;">
+	<a href="#" id="toggle" onClick="toggle_it('add_user');">Add user</a>
+	<input type="submit" name="user_delete" value="Remove user"/>
+      </div>
+      {% csrf_token %}
+      <div style="margin-left: 22%; margin-top: 75px; position: fixed; width:70%;">
+	<div id="add_user" style="display: none; background-color: #f2f2f2;">
 	  Username: <input type="text" name="username"/>
 	  Password: <input type="text" name="password"/>
 	  VLAN: <input type="text" name="vlan"/>
 	  <input type="submit" name="user_add" value="Add"/>
 	</div>
-	{% csrf_token %}
-	<br>
 	<table class="w3-table w3-striped w3-border">
 	  <tr>
 	    <th>Select</th>
@@ -57,7 +48,7 @@
 	  </tr>
 	  {% endfor %}
 	</table>
-      </form>
+    </form>
     </div>
   </body>
 </html>
