--- a/cnaas/nms/templates/jobs.html
+++ b/cnaas/nms/templates/jobs.html
@@ -1,67 +1,68 @@
 <html>
+  {% load static %}
   <head>
     <title>CNaaS</title>
+    <link rel="stylesheet" href="{% static "style.css" %}"/>
+    <link rel="stylesheet" href="{% static "w3.css" %}"/>
+    <script type="text/javascript" src={% static "cnaas.js" %}></script>
   </head>
-  <style>
-  #users {
-      font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-  }
-  #users td, #users th {
-      border: 1px solid #ddd;
-      padding: 8px;
-  }
-  #users tr:nth-child(even){background-color: #f2f2f2;}
-  #users tr:hover {background-color: #ddd;}
-  #users th {
-      padding-top: 12px;
-      padding-bottom: 12px;
-      text-align: left;
-      background-color: #4CAF50;
-      color: white;
-  }
-  </style>
-
   <body style="background-color:#d0d0d0;text-align:left">
-    <table id="users">
-      <tr>
-	<th>Job ID</th>
-	<th>Start time</th>
-	<th>End time</th>
-	<th>Status</th>
-	<th>Function name</th>
-	<th>Devices</th>
-	<th>Result</th>
-      </tr>
-      
-      {% for job in jobs %}
-      <tr>
-	<td>{{ job.id }}</td>
-	<td>{{ job.start_time }}</td>
-	<td>{{ job.finish_time }}</td>
-	<td>{{ job.status }}</td>
-	<td>{{ job.function_name }}</td>
-	<td>
-	  {% if job.result %}
-	    {% for devices in job.result %}
-	      {{ devices }}
-	    {% endfor %}
-	  {% endif %}
-	</td>
-	<td>
-	  {% if job.result %}
-	    {% for devices in job.result %}
-	      {% for result in job.result[devices] %}
-	        {{ result }} <br/><br/>
+    <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:20%; position: fixed;">
+      <h3 class="w3-bar-item">Menu</h3>
+      <a href="/nms/devices" class="w3-bar-item w3-button">Device inventory</a>
+      <a href="/nac/users" class="w3-bar-item w3-button">Admission control</a>
+      <a href="/nms/jobs" class="w3-bar-item w3-button">Jobs</a>
+      <a href="/nms/mgmtdomains" class="w3-bar-item w3-button">Management domains</a>
+      <a href="/nms/linknets" class="w3-bar-item w3-button">Linknets</a>
+    </div>
+    <div class="topnav" style="margin-left: 20%; position: fixed; width:80%;">
+      <a href="#" id="toggle" onClick="toggle_it('');">Refresh</a>
+    </div>
+    <div style="margin-left: 22%; margin-top: 75px; position: absolute; width:70%; overflow-y: scroll;">
+      <table class="w3-table w3-striped w3-border">
+	<tr>
+	  <th>Job ID</th>
+	  <th>Start time</th>
+	  <th>End time</th>
+	  <th>Status</th>
+	  <th>Function name</th>
+	</tr>
+
+	{% for job in jobs %}
+	<tr>
+	  <td><a href="#" id="toggle" onClick="toggle_it('{{ job.id }}');">{{ job.id }}</a></td>
+	  <td>{{ job.start_time }}</td>
+	  <td>{{ job.finish_time }}</td>
+	  <td>{{ job.status }}</td>
+	  <td>{{ job.function_name }}</td>
+	</tr>
+	<tr id="{{ job.id }}" bgcolor="white" style="display: none;">
+	  <td colspan="100%">
+	    <div class="device_info">
+	      {% for key,value in job.result.items %}
+	      {% ifnotequal key "_totals" %}
+	      <div class="title-row">{{ key }}</div>
+	      {% for item in value %}
+	      {% ifequal item.name "Generate device config" %}
+	      {{ item.name }}
+	      <div class="row">
+		<div class="cell">{{ item.result|linebreaks }}</div>
+	      </div>
+	      {% endifequal %}
+	      {% ifequal item.name "Sync device config" %}
+	      {{ item.name }}
+	      <div class="row">
+		<div class="cell">{{ item.diff|linebreaks }}</div>
+	      </div>
+	      {% endifequal %}
 	      {% endfor %}
-	    {% endfor %}
-	  {% elif job.exception %}
-	    {{ job.exception }}
-	  {% endif %}
-	</td>
-      </tr>
-      {% endfor %}
-    </table>
+	      {% endifnotequal %}
+	      {% endfor %}
+	    </div>
+	  </td>
+	</tr>
+	{% endfor %}
+      </table>
+    </div>
   </body>
 </html>
