--- a/cnaas/nms/templates/sync.html
+++ b/cnaas/nms/templates/sync.html
@@ -3,16 +3,18 @@
   <head>
     <title>CNaaS</title>
     <link rel="stylesheet" href="{% static "style.css" %}"/>
-    <link rel="stylesheet" href="{% static "w3.css" %}"/>        
+    <link rel="stylesheet" href="{% static "w3.css" %}"/>
   </head>
   <body style="background-color:#d0d0d0;text-align:left">
     <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:20%">
       <h3 class="w3-bar-item">Menu</h3>
       <a href="/nms/devices" class="w3-bar-item w3-button">Device inventory</a>
       <a href="/nac" class="w3-bar-item w3-button">Admission control</a>
-      <a href="/nms/jobs" class="w3-bar-item w3-button">Jobs</a>      
+      <a href="/nms/jobs" class="w3-bar-item w3-button">Jobs</a>
+      <a href="/nms/mgmtdomains" class="w3-bar-item w3-button">Management domains</a>
+      <a href="/nms/linknets" class="w3-bar-item w3-button">Linknets</a>
     </div>
-    <div style="margin-left: 22%; position: fixed;">
+    <div style="margin-left: 22%; margin-top: 75px; position: fixed;">
       <table id="devices">
 	{% for device in device_data %}
 	<tr>
