Add help-text and make device list scrollable

--- a/cnaas/nac/templates/nac.html
+++ b/cnaas/nac/templates/nac.html
@@ -14,6 +14,9 @@
       <a href="/nms/jobs" class="w3-bar-item w3-button">Jobs</a>
       <a href="/nms/mgmtdomains" class="w3-bar-item w3-button">Management domains</a>
       <a href="/nms/linknets" class="w3-bar-item w3-button">Linknets</a>
+      <div class="w3-bar-item w3-button" style="position: absolute; bottom: 0;">
+	<a href="https://cnaas-nms.readthedocs.io/en/latest/" class="w3-bar-item w3-button">Help</a>
+      </div>
     </div>
     <form action="/nac/users/" method="post">
       <div class="topnav" style="margin-left: 20%; position: fixed; width:100%;">
