--- a/cnaas/nms/templates/devices.html
+++ b/cnaas/nms/templates/devices.html
@@ -19,6 +19,9 @@
       <a href="/nms/jobs" class="w3-bar-item w3-button">Jobs</a>
       <a href="/nms/mgmtdomains" class="w3-bar-item w3-button">Management domains</a>
       <a href="/nms/linknets" class="w3-bar-item w3-button">Linknets</a>
+      <div class="w3-bar-item w3-button" style="position: absolute; bottom: 0;">
+	<a href="https://cnaas-nms.readthedocs.io/en/latest/" class="w3-bar-item w3-button">Help</a>
+      </div>
     </div>
     <form action="/nms/devices/" method="post">
       {% csrf_token %}
@@ -29,7 +32,7 @@
 	<input type="submit" name="sync" value="Sync devices - push config"/>
 	<input type="submit" name="remove" value="Remove devices"/>
       </div>
-      <div style="margin-left: 22%; margin-top: 75px; position: fixed; width:70%;">
+      <div style="margin-left: 22%; margin-top: 75px; position: absolute; width:70%; overflow-y: scroll;">
 	<table class="w3-table w3-striped w3-border">
 	  <tr>
 	    <th>Select</th>
