--- a/cnaas/nms/templates/sync.html
+++ b/cnaas/nms/templates/sync.html
@@ -13,6 +13,9 @@
       <a href="/nms/jobs" class="w3-bar-item w3-button">Jobs</a>
       <a href="/nms/mgmtdomains" class="w3-bar-item w3-button">Management domains</a>
       <a href="/nms/linknets" class="w3-bar-item w3-button">Linknets</a>
+      <div class="w3-bar-item w3-button" style="position: absolute; bottom: 0;">
+	<a href="https://cnaas-nms.readthedocs.io/en/latest/" class="w3-bar-item w3-button">Help</a>
+      </div>
     </div>
     <div style="margin-left: 22%; margin-top: 75px; position: fixed;">
       <table id="devices">
