applies specific styling to nav ul and no other uls

--- a/react-front/public/styles/main.css
+++ b/react-front/public/styles/main.css
@@ -33,13 +33,13 @@ nav {
   margin: 16px;
 }
 
-ul {
+nav ul {
   display: flex;
   justify-content: flex-end;
   /* background: gray; */
 }
 
-li {
+nav li {
   margin-right: 16px;
 }
 
